# m3p2i-aip

./: .gitignore  LICENSE  README.md  albert.py  boxer.py  mppi_point_robot.py  point_robot.py  pushing_boxes.py  pyproject.toml
assets/urdf/: heijn.urdf  pointRobot.urdf
examples/: albert.py  boxer.py  example_aif_parallel.py  example_aip_battery_task.py  example_aip_panda.py  example_aip_panda_real.py  example_aip_parallel.py  example_battery_isaac.py  example_key.py  example_mppi_point.py  mppi_point_robot.py  parallel_point_robot.py  parallel_pythorch.py  point_robot.py  simple_example_int_req.py  simple_example_task.py  test.py
examples/utils/: env_conf.py
params/: params_heijn.py  params_point.py  params_utils.py
planners/active_inference/: task_planner.py
planners/fusion_mppi/: fusion_mppi.py
planners/motion_planner/: fusion_mppi.py  m3p2i.py  mppi.py
planners/plot/: plot_class.py  plot_panda.py  test_save.py
planners/task_planner/: task_planner.py
scripts/: example_battery_isaac.py  example_boxer.py  example_heijn.py  example_key.py  example_mppi_point.py  example_omni_panda.py  example_panda.py  example_shadow.py  experimets_albert.py  mppi_albert.py  mppi_boxer.py  mppi_heijn.py  mppi_no_hand_panda.py  mppi_omnipanda.py  mppi_panda-storm.py  mppi_panda.py  mppi_panda_push.py  mppi_point.py  mppi_shadow.py  reactive_tamp.py  real.py  real_pick.py  sim.py  sim_new.py
scripts/active_inference/: adaptive_action_selection.py  ai_agent.py  isaac_int_req_templates.py  task_planner.py  (+3 more)
utils/: env_conf.py  mppi_utils.py  path_utils.py  sim_init.py
(+146 files in other folders)
