[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "m3p2i_aip"
version = "0.0.1"
dependencies = [
  "torch==1.13.1",
  "torchvision==0.14.1",
  "dash",
  "pandas",
  "npy-append-array",
  "python-dateutil",
  "ghalton",
  "hydra-core",
  "zerorpc",
]
requires-python = ">=3.8"
authors = [
  {name = "Yuezhe Zhang", email = "yuezhezhang_bit@163.com"},
]


[project.urls]
Homepage = "https://autonomousrobots.nl/paper_websites/m3p2i-aip"
Repository = "https://github.com/tud-amr/m3p2i-aip"